# pytorch-tcuscan

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.spaa.mk  Makefile.spmv.mk  Makefile.tri_inv.mk  README.gitee.md  README.md  add_custom.cpp  build-pypackage.sh  build-tidy.sh  build.sh  execute_sparsity_test.sh  profile_add_custom.py  profile_random_matrices.py  profile_sparse_matrices.py  profile_tcuscan_ops.py  pybind11.cpp  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_radix_sort.py  run_spmv_v2.py  setup_conda.sh  test_add_custom.py
.claude/agents/: translate-ascendc-to-pto-isa.md
.claude/commands/: translate-kernel.md
.github/workflows/: build.yml
doxygen/: Doxyfile
nbs/data-generation/: sparse-llm-like-matrices.ipynb
nbs/kronecker-circuits/: calculate_optimal_depth.ipynb  dynamic_prog.ipynb  verify_zero_deficiency.ipynb
nbs/paper-plots/: figure3_mm_vs_vect_segscan.ipynb  figure4_sparseSuite_analysis.ipynb  figure5_breakdowns.ipynb  figure_7_segsum_soa.ipynb  mcscan_l2_vs_no_l2.ipynb  mcscan_versus_copy.ipynb  plot_block_scan.ipynb  plot_complete_blocks.ipynb  plt_breakdown_spmv.ipynb  plt_csr_gather.ipynb  plt_diff.ipynb  plt_gen_lower.ipynb  plt_mcgather.ipynb  plt_mcscan.ipynb  plt_radix_sort.ipynb  plt_radixsort.ipynb  plt_searchsorted.ipynb  plt_seg_sum_multi_core.ipynb  plt_spmv_comparison.ipynb  plt_spmv_versions_comparison.ipynb  plt_spmv_versions_random_comparison.ipynb  plt_topk_int32.ipynb  row_scan_ascendc_vs_cce.ipynb  scan_multi_cube_versus_memcopy.ipynb
nbs/segmentedcan/: chart.ipynb
nbs/segmentedsum/: SegSumAlgoMultiCore.ipynb
nbs/triangular-inverse/: notebook.ipynb  tri_inv_col_sweep.ipynb
paper-plots/: Load_Sparse_Suite_Matrices.ipynb  figure3_mm_vs_vect_segscan.ipynb  figure4_sparseSuite_analysis.ipynb  figure5_segm_scan.ipynb  figure6_breakdowns.ipynb  mcscan_versus_copy.ipynb  plt_bandwidth_mc_seg_ops.ipynb  plt_compress.ipynb  plt_csr_gather.ipynb  plt_diff.ipynb  plt_mcgather.ipynb  plt_mcscan.ipynb  plt_mcss.ipynb  plt_revert.ipynb  plt_scd.ipynb  plt_segm_scan_sc.ipynb  plt_segm_sum.ipynb  segm_scan_ascend.ipynb  segm_scan_ascend_figure_1.ipynb  segm_scan_ascend_figure_1_diff.ipynb
python/tcuscan/: __init__.py
scripts/: setup_conda.sh
scripts/baselines/eigen-spmv-cpu/: CMakeLists.txt  Makefile  README.md  example.cpp  execute_all_sparse_suite.py  execute_tests.sh  execute_tests_alenex26.sh  execute_tests_iclr26.sh  sparsesuite.cpp
scripts/baselines/eigen-spmv-cpu/cmake/: FindEigen3.cmake
scripts/baselines/kunpeng-kml-spmv-cpu/: CMakeLists.txt  Makefile  README.md  execute_all_sparse_suite.py  execute_tests.sh  execute_tests_alenex26.sh  kml_spmv_sparsesuite.cpp
scripts/ci/: run-clang-tidy.py
scripts/gen_kernel/: .gitignore  Makefile  README.md  gen_new_kernel.py
scripts/profiling/: README.md  profile_kernel.py  profile_random_matrices.py  profile_sparse_matrices.py  profile_spmv_comparison.py  profile_tcuscan_ops.py  profile_tcuscan_ops_cpu.py  profile_tcuscan_ops_gpu.py
scripts/sparse-suite-downloader/: Makefile  README.md  download-sparse-suite-matrices.py  extract_py_names.sh
soa/cusparse/: spmv_sparsesuite.cu
soa/torch_scatter/: loadmatrices.py  segmentedsum.py
src/: add_custom.cpp  block_scan.cpp  compare.cpp  complete_blocks.cpp  complete_rows.cpp  compress.cpp  copy.cpp  count_if.cpp  csr_gather.cpp  cube_reduce.cpp  diff.cpp  gather_spmv.cpp  gather_spmv_diff.cpp  gen_lower.cpp  histogram.cpp  host_utils.h  kernel_diff.cpp  matmul_cce.cpp  mc_gather.cpp  pybind11.cpp  radix_sort.cpp  radix_sort_fp16.cpp  reduce_tiles.cpp  row_scan.cpp  scan_batch.cpp  scan_multi_core.cpp  scan_multi_cube.cpp  scan_single_core.cpp  searchsorted.cpp  seg_scan_mc_revert.cpp  seg_scan_single_core.cpp  seg_scan_vec_single_core.cpp  seg_sum_multi_core.cpp  seg_sum_multi_cube.cpp  seg_sum_single_core.cpp  seg_sum_single_cube.cpp  simple_pad.cpp  split.cpp  spmv.cpp  spmv_ops_sparse.cpp  (+8 more)
src/kernels/: add_custom.h  ascendc_kernel_operator.h  constants.h  diff.h  kernel_arithmetic_progression.h  kernel_block_scan.h  kernel_complete_blocks.h  kernel_complete_rows.h  kernel_compress.h  kernel_compress_ind.h  kernel_copy.h  kernel_count_if.h  kernel_csr_gather.h  kernel_cube_reduce.h  kernel_diff.h  kernel_gather_spmv.h  kernel_gen_lower.h  kernel_greater_equal.h  kernel_histogram.h  kernel_less_or_equal.h  kernel_matmul_cce.h  kernel_mc_gather.h  kernel_pad.h  kernel_pad_batch.h  kernel_pto_cube_reduce.h  kernel_radix_enc.h  kernel_reduce_tiles.h  kernel_row_scan.h  kernel_scan2p_single_core.h  kernel_scan_batch.h  kernel_scan_multi_core.h  kernel_scan_multi_cube.h  kernel_scan_single_core.h  kernel_searchsorted.h  kernel_seg_scan_mc_revert.h  kernel_seg_scan_single_core.h  kernel_seg_scan_vec_single_core.h  kernel_seg_sum_cube_revert.h  kernel_seg_sum_single_core.h  kernel_seg_sum_vec_revert.h  (+17 more)
src/tiling/: tiling_block_scan.h  tiling_complete_blocks.h  tiling_complete_rows.h  tiling_compress.h  tiling_copy.h  tiling_count_if.h  tiling_csr_gather.h  tiling_cube_reduce.h  tiling_diff.h  (+32 more)
tests/: test_add_custom.py  test_block_scan.py  test_complete_blocks.py  test_complete_rows.py  test_compress.py  test_compress_ind.py  test_compress_ind_no_arange.py  test_compress_pos.py  test_copy.py  test_count_if.py  test_csr_gather.py  test_cube_reduce.py  test_diff.py  test_filter_greater_equal.py  test_filter_less_equal.py  test_gather_spmv.py  test_gather_spmv_matrix.py  test_gen_lower.py  test_histogram.py  test_matmul_cce.py  test_mc_gather.py  test_radix_sort.py  test_reduce_tiles.py  test_row_scan.py  test_scan_batch.py  test_scan_cpu.py  test_scan_multi_core.py  test_scan_multi_core_no_l2.py  test_scan_multi_cube.py  test_scan_single_core.py  test_searchsorted.py  test_seg_scan_mc_revert.py  test_seg_scan_single_core.py  test_seg_scan_vec_single_core.py  test_seg_sum_multi_core.py  test_seg_sum_multi_cube.py  test_seg_sum_single_core.py  test_seg_sum_single_cube.py  test_segmented_sum.py  test_segmented_sum_experimental.py  (+15 more)
(+115 files in other folders)
