[build-system]
requires = [
  "scikit-build-core",
  "pybind11==3.0.1",
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-linux_x86_64.whl",
  "torch_npu @ https://gitcode.com/Ascend/pytorch/releases/download/v7.1.0.2-pytorch2.6.0/torch_npu-2.6.0.post2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
PIP_INSTALL="ON"
SOC_VERSION = {env="SOC_VERSION", default="Ascend910B4"}
ASCEND_CANN_PACKAGE_PATH = {env="ASCEND_CANN_PACKAGE_PATH", default="/usr/local/Ascend/ascend-toolkit/latest"}

[project]
name = "tcuscan"
version = "0.1.0"
description="Parallel Scan on Ascend AI Accelerators"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-linux_x86_64.whl",
  "torch_npu @ https://gitcode.com/Ascend/pytorch/releases/download/v7.1.0.2-pytorch2.6.0/torch_npu-2.6.0.post2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
]

[tool.scikit-build]
wheel.packages = ["python/tcuscan"]
