[build-system]
requires = [
  "scikit-build-core",
  "pybind11==3.0.1",
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.9.0%2Bcpu-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=bd2a257e670ede9fc01c6d76dccdc473040913b8e9328169bf177dbdc38e2484",
  "torch_npu==2.9.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
PIP_INSTALL="ON"
SOC_VERSION = {env="SOC_VERSION", default="Ascend910B4"}
ASCEND_CANN_PACKAGE_PATH = {env="ASCEND_CANN_PACKAGE_PATH", default="/usr/local/Ascend/ascend-toolkit/latest"}

[project]
name = "tcuscan"
version = "0.1.0"
description="Parallel Scan on Ascend AI Accelerators"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.9.0%2Bcpu-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=bd2a257e670ede9fc01c6d76dccdc473040913b8e9328169bf177dbdc38e2484",
  "torch_npu==2.9.0",
]

[tool.scikit-build]
wheel.packages = ["python/tcuscan"]
