[build-system]
requires = [
  "scikit-build-core",
  "pybind11==3.0.1",
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "torch-npu==2.9.0.post2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
PIP_INSTALL="ON"
SOC_VERSION = {env="SOC_VERSION", default="Ascend910B4"}
ASCEND_CANN_PACKAGE_PATH = {env="ASCEND_CANN_PACKAGE_PATH", default="/usr/local/Ascend/ascend-toolkit/latest"}

[project]
name = "tcuscan"
version = "0.1.0"
description="Parallel Scan on Ascend AI Accelerators"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pybind11==3.0.1",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
]

[project.optional-dependencies]
torch = [
  "torch-npu==2.9.0.post2",
]

[tool.scikit-build]
wheel.packages = ["python/tcuscan"]
